--- a/env.example
+++ b/env.example
@@ -1,26 +1,14 @@
-# Discord Bot Configuration
-DISCORD_TOKEN=your_discord_bot_token_here
+# Discord Bot Token
+DISCORD_TOKEN=YOUR_DISCORD_TOKEN_HERE
 
-# Google Gemini API Configuration
-GEMINI_API_KEY=your_gemini_api_key_here
+# Google Gemini API Key
+GEMINI_API_KEY=YOUR_GEMINI_API_KEY_HERE
+
+# 使用するモデル名（デフォルト: gemini-2.5-flash）
 GEMINI_MODEL_NAME=gemini-2.5-flash
 
-# Gemini 2.5 Flash Thinking Configuration
-# 0 = 思考機能オフ（高速）
-# -1 = 動的思考（推奨）
-# 正の整数 = 思考トークン数上限（1-24576）
+# 並列リクエスト数
+API_CONCURRENCY=5
+
+# 思考機能予算（0=オフ, -1=動的, 正の整数=固定トークン数）
 GEMINI_THINKING_BUDGET=-1
-
-# API Configuration
-API_CONCURRENCY=3
-
-# Encryption Configuration (optional)
-# 未設定の場合は自動生成されます
-ENCRYPTION_KEY=
-
-# Logging Configuration
-LOG_LEVEL=INFO
-
-# Optional: Docker specific settings
-PYTHONUNBUFFERED=1
-PYTHONPATH=/app
