--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.9'
-
 services:
   discord-transcription-bot:
     build:
@@ -11,14 +9,19 @@ services:
     env_file:
       - .env
     
-    # 環境変数の直接指定（オプション）
+    # 環境変数の直接指定
     environment:
       - PYTHONUNBUFFERED=1
       - TZ=Asia/Tokyo
     
-    # ボリュームマウント（設定ファイルの永続化）
+    # ボリュームマウント（修正版）
     volumes:
-      - ./channels.json:/app/channels.json
+      - type: bind
+        source: ./channels.json
+        target: /app/channels.json
+      - type: bind
+        source: ./encryption.key
+        target: /app/encryption.key
       - ./logs:/app/logs
       - ./temp:/app/temp
     
@@ -26,11 +29,11 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '0.50'          # CPU使用率を50%に制限
-          memory: 1G            # メモリ使用量を1GBに制限
+          cpus: '0.50'
+          memory: 1G
         reservations:
-          cpus: '0.25'          # 最低限のCPU予約
-          memory: 512M          # 最低限のメモリ予約
+          cpus: '0.25'
+          memory: 512M
     
     # 再起動ポリシー
     restart: unless-stopped
@@ -42,9 +45,6 @@ services:
         max-size: "10m"
         max-file: "3"
     
-    # ネットワーク設定（外部接続が必要）
-    network_mode: "bridge"
-    
     # ヘルスチェック
     healthcheck:
       test: ["CMD-SHELL", "python -c 'import sys; sys.exit(0)'"]
@@ -52,13 +52,3 @@ services:
       timeout: 10s
       retries: 3
       start_period: 40s
-
-# ボリューム定義（データ永続化用）
-volumes:
-  bot_data:
-    driver: local
-
-# ネットワーク定義（必要に応じて）
-networks:
-  bot_network:
-    driver: bridge
