--- a/env.example
+++ b/env.example
@@ -8,7 +8,10 @@ GEMINI_API_KEY=YOUR_GEMINI_API_KEY_HERE
 GEMINI_MODEL_NAME=gemini-2.5-flash
 
 # 並列リクエスト数
-API_CONCURRENCY=5
+API_CONCURRENCY=3
 
 # 思考機能予算（0=オフ, -1=動的, 正の整数=固定トークン数）
 GEMINI_THINKING_BUDGET=-1
+
+# ログレベル
+LOG_LEVEL=INFO
