--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,48 +1,16 @@
+version: '3.9'
 services:
-  discord-transcription-bot:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: discord-transcription-bot
-    
-    # 環境変数ファイルを読み込み
+  bot:
+    build: .
     env_file:
       - .env
-    
-    # 環境変数の直接指定
-    environment:
-      - PYTHONUNBUFFERED=1
-      - TZ=Asia/Tokyo
-    
-    # ボリュームマウント
     volumes:
       - ./logs:/app/logs
       - ./temp:/app/temp
-    
-    # リソース制限
+    restart: unless-stopped
     deploy:
       resources:
         limits:
-          cpus: '0.50'
+          cpus: '0.5'
           memory: 1G
-        reservations:
-          cpus: '0.25'
-          memory: 512M
-    
-    # 再起動ポリシー
-    restart: unless-stopped
-    
-    # ログ設定
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "3"
-    
-    # ヘルスチェック
-    healthcheck:
-      test: ["CMD-SHELL", "python -c 'import sys; sys.exit(0)'"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 40s
+
